--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@pinia/nuxt": "^0.5.1",
+    "@vite-pwa/nuxt": "^0.9.1",
     "axios": "^1.7.2",
     "nuxt": "^3.12.2",
     "photoswipe": "^5.4.2",
