--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "compression": "^1.7.4",
     "pug": "^3.0.3",
     "pug-plain-loader": "^1.1.0"
   },
