--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "compression": "^1.7.4",
+    "postcss": "^8.4.41",
     "pug": "^3.0.3",
-    "pug-plain-loader": "^1.1.0"
+    "pug-plain-loader": "^1.1.0",
+    "tailwindcss": "^3.4.9"
   },
   "browserslist": [
     "> 1%",
