--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@vite-pwa/nuxt": "^0.9.1",
     "axios": "^1.7.2",
+    "firebase": "^10.13.0",
     "nuxt": "^3.12.2",
     "photoswipe": "^5.4.2",
     "pinia": "^2.1.7",
