--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "postcss": "^8.4.41",
     "pug": "^3.0.3",
     "pug-plain-loader": "^1.1.0",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.1",
     "tailwindcss": "^3.4.9"
   },
   "browserslist": [
